--- a/nevernote-core/src/main/resources/static/settings.html
+++ b/nevernote-core/src/main/resources/static/settings.html
@@ -56,28 +56,34 @@
         <div>
             <script type="text/html" id="pluginline_tmpl">
                 <tr class="{{stateClass}}">
+                    <td>{{bundleName}}</td>
                     <td>{{pluginName}}</td>
+                    <td><span class="label {{labelStateClass}}">{{state}}</span></td>
                     <td>
-                        <button data-id="{{pluginId}}BtnState" class="btn {{btnStateClass}} btn-state"><i class="{{btnStateIcon}} icon-white"></i></button>
+                        <button data-id="{{bundleId}}" class="btn {{btnStateClass}} btn-state"><i class="{{btnStateIcon}} icon-white"></i></button>
                         &nbsp;
-                        <button data-id="{{pluginId}}BtnTrash" class="btn btn-danger btn-trash"><i class="icon-trash icon-white"></i>
+                        <button data-id="{{bundleId}}" class="btn {{btnTrashClass}} btn-trash"><i class="icon-trash icon-white"></i>
                         </button>
                     </td>
                 </tr>
             </script>
             <script type="text/html" id="pluginfooter_tmpl">
                 <tr class="info">
-                    <td>Add a plugin</td>
+                    <td>Browse to add a new plugin bundle</td>
+                    <td></td>
                     <td>
                         <button type="button" class="btn btn-primary"><i class="icon-folder-open icon-white"></i></button>
                     </td>
+                    <td></td>
                 </tr>
             </script>
             <table class="table table-striped table-condensed">
                 <thead>
                 <tr>
-                    <th width="75%">Plugin</th>
-                    <th width="25%">Actions</th>
+                    <th width="35%">Bundle</th>
+                    <th width="35%">Plugin</th>
+                    <th width="15%">State</th>
+                    <th width="15%">Actions</th>
                 </tr>
                 </thead>
                 <tbody id="plugins">
@@ -96,65 +102,89 @@
     }
     $(document).ready(function () {
         function appendPlugin(elem) {
-            var stateClass = 'error'
+            var stateClass = 'warning'
+            var labelStateClass = 'label-inverse'
+            var state = 'UNKNOWN'
             var btnStateClass = 'btn-success'
             var btnStateIcon = 'icon-play'
-            if (elem.active == true) {
-                stateClass = 'success'
-                btnStateClass = 'btn-danger'
-                btnStateIcon = 'icon-stop'
+            var btnTrashClass = 'btn-danger'
+            switch (elem.state) {
+                case 'INSTALLED':
+                    stateClass = 'warning'
+                    labelStateClass = 'label-warning'
+                    state = 'INSTALLED'
+                    break;
+                case 'ACTIVE':
+                    stateClass = 'success'
+                    labelStateClass = 'label-success'
+                    state = 'ACTIVE'
+                    btnStateClass = 'btn-warning'
+                    btnStateIcon = 'icon-stop'
+                    break;
+                case 'TREATING':
+                    stateClass = 'info'
+                    labelStateClass = 'label-info'
+                    state = 'TREATING'
+                    btnStateClass = 'hide'
+                    btnStateIcon = 'icon-ban-circle'
+                    btnTrashClass = 'btn-danger'
+                    break;
+                default:
+                    btnStateClass = 'hide'
+                    btnStateIcon = 'icon-ban-circle'
+                    btnTrashClass = 'btn-danger'
+                    break;
             }
             $('#plugins').append(render("#pluginline_tmpl",
                     {
-                        pluginId:elem.id,
-                        pluginName:elem.name,
-                        stateClass:stateClass,
-                        btnStateClass:btnStateClass,
-                        btnStateIcon:btnStateIcon
+                        bundleName: elem.bundleName,
+                        pluginName: elem.pluginName,
+                        bundleId: elem.bundleId,
+                        stateClass: stateClass,
+                        labelStateClass: labelStateClass,
+                        state: state,
+                        btnStateClass: btnStateClass,
+                        btnStateIcon: btnStateIcon,
+                        btnTrashClass: btnTrashClass
                     }))
         }
-        function updatePlugins() {
+        var  updatePlugins = function() {
             $('#plugins').empty()
             $.get('/plugins/installed', function (data) {
                 if (data != null && data != null && data != undefined) {
                     data.forEach(function (plugin, array, idx) {
-                        var elem = {id: plugin.id, name: plugin.name,active:false}
-                        appendPlugin(elem)
+                        appendPlugin(plugin)
                     })
                 }
                 $.get('/plugins/active', function (data) {
                     if (data != null && data != null && data != undefined) {
                         data.forEach(function (plugin, array, idx) {
-                            console.log(plugin)
-                            var elem = {id: plugin.id, name: plugin.name,active:true}
-                            appendPlugin(elem)
+                            appendPlugin(plugin)
                         })
                     }
                     $('#plugins').append(render("#pluginfooter_tmpl",{}))
                 })
             })
         }
-        updatePlugins()
+        setInterval(updatePlugins(), 1000)
         $(".btn-state").live('click', function (e) {
             e.preventDefault()
-            var id = $(this).data('id').substr(0,$(this).data('id').length - 8)
-            console.log(id)
-            if($(this).hasClass('btn-danger')) {
-              $.get('/plugins/' + id + '/stop', function (data) {
+            var bundleId = $(this).data('id')
+            if($(this).hasClass('btn-warning')) {
+              $.get('/plugins/' + bundleId + '/stop', function (data) {
                 updatePlugins()
               })
             }
-            else {
-              $.get('/plugins/' + id + '/start', function (data) {
+            else if($(this).hasClass('btn-success')) {
+              $.get('/plugins/' + bundleId + '/start', function (data) {
                 updatePlugins()
               })
             }
         })
         $(".btn-trash").live('click', function (e) {
             e.preventDefault()
-            var id = $(this).data('id').substr(0,$(this).data('id').length - 8)
-            console.log(id)
-            $.get('/plugins/' + id + '/remove', function (data) {
+            var bundleId = $(this).data('id')
+            $.get('/plugins/' + bundleId + '/remove', function (data) {
               updatePlugins()
             })
         })
